--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,8 +13,7 @@ jobs:
 
       - name: Sync to Live Folder
         run: |
-          # Use rsync to copy only necessary files and exclude .git
-          # This prevents the "Permission denied" error
+          # Moves files while ignoring Git internals to avoid permission errors
           rsync -av --exclude='.git' . /home/backend/test/
           cd /home/backend/test/
           npm install
@@ -22,6 +21,5 @@ jobs:
       - name: Restart PM2
         run: |
           cd /home/backend/test/
-          # Restart the ttsign process that is currently online
+          # Force PM2 to reload the files from the disk into memory
           pm2 restart ttsign || pm2 start server.js --name ttsign
-          
