--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,25 @@
-name: Node.js CD - PM2
+name: Node.js CD - Production
 
 on:
   push:
-    branches: [ 'main' ] # Change this to 'production' if that is your branch name
+    branches: [ 'main' ]
 
 jobs:
   deploy:
     runs-on: self-hosted
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Sync to Project Folder
-        # Using rsync ensures we don't get permission errors on the .git folder
+      - name: Deploy to Live Folder
         run: |
+          # Use rsync to copy only code files (ignores .git)
           rsync -av --exclude='.git' . /home/backend/test/
           cd /home/backend/test/
           npm install
 
-      - name: Restart Application with PM2
+      - name: Restart PM2
         run: |
           cd /home/backend/test/
-          # 'reload' provides zero-downtime; if the process is new, it will 'start'
-          pm2 reload ttsign --update-env || pm2 start server.js --name ttsign
+          # Reload the specific file to apply changes
+          pm2 restart ttsign || pm2 start server.js --name ttsign
+          pm2 save
