--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,15 +24,12 @@ jobs:
 
       - name: Deploy with PM2
         run: |
-          # 1. Sync files to the app folder
-          sudo cp -rf $GITHUB_WORKSPACE/* /home/ttSign/test/
-
-          # 2. Navigate and install production dependencies
+          # 1. Sync files (No sudo needed since nonroot owns the folder)
+          cp -rf $GITHUB_WORKSPACE/* /home/ttSign/test/
+          
+          # 2. Navigate and install dependencies
           cd /home/ttSign/test
-          sudo npm install --production
+          npm install --production
 
-          # 3. Reload the app using the full path to PM2
+          # 3. Reload the app (Use full path to be safe)
           sudo /usr/local/bin/pm2 reload ttSign --update-env || sudo /usr/local/bin/pm2 start server.js --name "ttSign"
-
-          # 4. Save PM2 state
-          sudo /usr/local/bin/pm2 save
